--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ ipdb = "^0.13.13"
 mypy = "^1.8.0"
 flake8 = "^6.1.0"
 black = "^23.12.1"
+sphinx = "^7.2.6"
+sphinx-rtd-theme = "^2.0.0"
 
 
 [build-system]
